# MFoptimizationTools

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  conftest.py  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: CI.yml
_modules/: index.html
_modules/optimizationTools/: geometryTools.html  scripts.html  surrogateModels.html  surrogateTools.html
_sources/content/01_freecad_macros/: macros.md
_sources/content/modules/: modules.rst  optimizationTools.geometryTools.rst  optimizationTools.rst  optimizationTools.scripts.rst  optimizationTools.surrogateModels.rst  (+1 more)
content/00_intro/: intro.html
content/01_freecad_macros/: macros.html
content/modules/: modules.html  optimizationTools.geometryTools.html  optimizationTools.html  optimizationTools.scripts.html  optimizationTools.surrogateModels.html  optimizationTools.surrogateTools.html
doc/: _config.yml  _toc.yml  build_doc.sh
examples/modify_geometry/: settings.yaml
examples/optimization/: README.md  dakota_opt.in  dakota_sampling.in  simulator_script.sh  submit_opt.slm  submit_sampling.slm
optimizationTools/: __init__.py
optimizationTools/geometryTools/: __init__.py
optimizationTools/scripts/: __init__.py
optimizationTools/surrogateModels/: __init__.py
optimizationTools/surrogateTools/: __init__.py
tests/: test_geometryTools.py  test_surrogateModels.py  test_surrogateTools.py
tests/test_geometryTools/: face_cube.ast  face_sphere.ast  merged_faces_FC.stl  test_document.FCStd
tests/test_surrogateModels/: reference_hierarch_kriging.csv
tests/test_surrogateTools/: dakota_create_surfpack_GP.in  dakota_create_surfpack_poly.in  himmelblau_function.py  predictions_gaussian_process.csv  predictions_polynomial.csv  surfpack_cubic_polynomial.alg  surfpack_gaussian_process.alg
(+31 files in other folders)
