[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "optimizationTools"
description = "python tools for geometry optimization with Dakota, OpenFOAM and FreeCAD"
version = "0.1"
authors = [
    {name = "Raphael Strickling", email = "strickling@stfs.tu-darmstadt.de"}
]
license = {text = "MIT"}

requires-python = ">= 3.10"

# main dependencies are managed with conda,
# since FreeCAD is not available through pip
[project.optional-dependencies]
test = ["pytest", "pytest-cov", "trimesh"]
dev = ["ruff", "pre-commit"]
doc = ["sphinx", "sphinx-autodoc-typehints", "jupyter-book<2"]
postproc = ["pyvista"]
all = ["pytest", "pytest-cov", "trimesh", "ruff", "pre-commit", "sphinx", "sphinx-autodoc-typehints", "jupyter-book<2", "pyvista"]

[project.scripts]
modifyGeom = "optimizationTools.scripts:modify_geometry"

[tool.setuptools.packages.find]
exclude = ["doc"]

# test with coverage option
[tool.pytest.ini_options]
addopts = ["--cov=optimizationTools"]

# Ruff configuration (linter + formatter)
[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["examples"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modernize code)
    "B",      # flake8-bugbear (catch common bugs)
    "SIM",    # flake8-simplify
    "NPY",    # numpy-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "I001",   # import order formatter not compatible with FreeCAD
    "SIM108", # inline if else too strict
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports for FreeCAD

